--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-md-4 offset-md-1">
                     <a href="#" class="subheader_logo">
-                        <img src="../../img/logo/logo.png" alt="logo">
+                        <img src="img/logo/logo.png" alt="logo">
                         <div class="subheader_official">Официальный партнер Uber в Украине</div>
                     </a>
                 </div>
@@ -88,7 +88,7 @@
             <div class="col-md-6">
                 <div class="reasons_item">
                     <div class="reasons_img">
-                        <img src="../../img/reasons/reason_1.png" alt="1" class="reasons_icon">
+                        <img src="img/reasons/reason_1.png" alt="1" class="reasons_icon">
                     </div>
                     <div class="reasons_desc">
                         <div class="reasons_item-title">Никаких наличных, оплата происходит автоматически</div>
@@ -100,7 +100,7 @@
             <div class="col-md-6">
                 <div class="reasons_item">
                     <div class="reasons_img">
-                        <img src="../../img/reasons/reason_2.png" alt="2" class="reasons_icon">
+                        <img src="img/reasons/reason_2.png" alt="2" class="reasons_icon">
                     </div>
                     <div class="reasons_desc">
                         <div class="reasons_item-title">Комиссия 8% + БОНУСЫ</div>
@@ -112,7 +112,7 @@
             <div class="col-md-6">
                 <div class="reasons_item">
                     <div class="reasons_img">
-                        <img src="../../img/reasons/reason_3.png" alt="1" class="reasons_icon">
+                        <img src="img/reasons/reason_3.png" alt="1" class="reasons_icon">
                     </div>
                     <div class="reasons_desc">
                         <div class="reasons_item-title">Высокий доход с гарантированными выплатами</div>
@@ -124,7 +124,7 @@
             <div class="col-md-6">
                 <div class="reasons_item">
                     <div class="reasons_img">
-                        <img src="../../img/reasons/reason_4.png" alt="1" class="reasons_icon">
+                        <img src="img/reasons/reason_4.png" alt="1" class="reasons_icon">
                     </div>
                     <div class="reasons_desc">
                         <div class="reasons_item-title">Работа в удобное время, никаких графиков</div>
@@ -136,7 +136,7 @@
             <div class="col-md-6">
                 <div class="reasons_item">
                     <div class="reasons_img">
-                        <img src="../../img/reasons/reason_5.png" alt="1" class="reasons_icon">
+                        <img src="img/reasons/reason_5.png" alt="1" class="reasons_icon">
                     </div>
                     <div class="reasons_desc">
                         <div class="reasons_item-title">Комфортное, прозрачное и простое подключение</div>
@@ -148,7 +148,7 @@
             <div class="col-md-6">
                 <div class="reasons_item">
                     <div class="reasons_img">
-                        <img src="../../img/reasons/reason_6.png" alt="1" class="reasons_icon">
+                        <img src="img/reasons/reason_6.png" alt="1" class="reasons_icon">
                     </div>
                     <div class="reasons_desc">
                         <div class="reasons_item-title">Всегда большое количество заказов</div>
@@ -160,7 +160,7 @@
             <div class="col-md-6">
                 <div class="reasons_item">
                     <div class="reasons_img">
-                        <img src="../../img/reasons/reason_7.png" alt="1" class="reasons_icon">
+                        <img src="img/reasons/reason_7.png" alt="1" class="reasons_icon">
                     </div>
                     <div class="reasons_desc">
                         <div class="reasons_item-title">Круглосуточная поддержка</div>
@@ -172,7 +172,7 @@
             <div class="col-md-6">
                 <div class="reasons_item">
                     <div class="reasons_img">
-                        <img src="../../img/reasons/reason_8.png" alt="1" class="reasons_icon">
+                        <img src="img/reasons/reason_8.png" alt="1" class="reasons_icon">
                     </div>
                     <div class="reasons_desc">
                         <div class="reasons_item-title">Без шашечек и наклеек</div>
@@ -192,37 +192,37 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="mobile_item">
-                    <img src="../../img/bg/mobile_screen_1.jpeg" alt="" class="mobile_img">
+                    <img src="img/bg/mobile_screen_1.jpeg" alt="" class="mobile_img">
                     <div class="mobile_title">ОФОРМЛЕНИЕ ЗАКАЗА ОДНИМ КАСАНИЕМ</div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mobile_item">
-                    <img src="../../img/bg/mobile_screen_2.jpeg" alt="" class="mobile_img">
+                    <img src="img/bg/mobile_screen_2.jpeg" alt="" class="mobile_img">
                     <div class="mobile_title">НАДЕЖНАЯ ПОДАЧА</div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mobile_item">
-                    <img src="../../img/bg/mobile_screen_3.jpeg" alt="" class="mobile_img">
+                    <img src="img/bg/mobile_screen_3.jpeg" alt="" class="mobile_img">
                     <div class="mobile_title">ПРОЗРАЧНЫЕ ЦЕНЫ</div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mobile_item">
-                    <img src="../../img/bg/mobile_screen_4.jpeg" alt="" class="mobile_img">
+                    <img src="img/bg/mobile_screen_4.jpeg" alt="" class="mobile_img">
                     <div class="mobile_title">БЕЗНАЛИЧНАЯ ОПЛАТА</div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mobile_item">
-                    <img src="../../img/bg/mobile_screen_5.jpeg" alt="" class="mobile_img">
+                    <img src="img/bg/mobile_screen_5.jpeg" alt="" class="mobile_img">
                     <div class="mobile_title">ОБРАТНАЯ СВЯЗЬ</div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mobile_item">
-                    <img src="../../img/bg/mobile_screen_6.jpeg" alt="" class="mobile_img">
+                    <img src="img/bg/mobile_screen_6.jpeg" alt="" class="mobile_img">
                     <div class="mobile_title">РАЗДЕЛИТЬ СТОИМОСТЬ ПОЕЗДКИ</div>
                 </div>
             </div>
@@ -234,7 +234,7 @@
     <div class="container">
         <h2 class="title">ВЫБОР - ОТЛИЧНАЯ ШТУКА!</h2>
         <div class="subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-        <img src="../../img/bg/car.png" alt="car" class="choice_img">
+        <img src="img/bg/car.png" alt="car" class="choice_img">
         <div class="choice_desc">Машины на каждый день.<br>
             Лучше, быстрее и дешевле, чем такси</div>
     </div>
