--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	<meta name="description" content="To grow in your field, you need to listen to criticism and advice from outside.">
 
 	<!-- favicon -->
-	<!-- <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
 	<link rel="manifest" href="img/fav/site.webmanifest">
 	<link rel="mask-icon" href="img/fav/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="theme-color" content="#ffffff"> -->
+	<meta name="theme-color" content="#ffffff">
 
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-grid.min.css">
