--- a/index.html
+++ b/index.html
@@ -239,6 +239,60 @@
             Лучше, быстрее и дешевле, чем такси</div>
     </div>
 </section>
+        <section class="requirements">
+    <h1 class="title">УСЛОВИЯ И ТРЕБОВАНИЯ</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="requirements_title">УСЛОВИЯ: со своим авто:</div>
+                <ul>
+                    <li class="requirements_li">Подключаем к системе UBER под 10%.</li>
+                    <li class="requirements_li">Ни каких взносов 0%!</li>
+                    <li class="requirements_li">Можем подключать удаленно без приезда в офис</li>
+                    <li class="requirements_li">ИП не требуется</li>
+                    <li class="requirements_li">Заказы распределяются без учета рейтинга ближайшим водителям</li>
+                    <li class="requirements_li">Работа только по безналичному расчету</li>
+                    <li class="requirements_li">Деньги перечисляем на карту водителю или наличными в офисе</li>
+                </ul>
+                <div class="requirements_desc">В день заработок составляет 7000-12000р + бонус 3000т рублей</div>
+            </div>
+            <div class="col-md-6">
+                <div class="requirements_title">УСЛОВИЯ: на авто компании:</div>
+                <ul>
+                    <li class="requirements_li">Предоставляем авто без залога</li>
+                    <li class="requirements_li">Без ежедневных выплат по аренде</li>
+                    <li class="requirements_li">Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="requirements_title requirements_title-red">ТРЕБОВАНИЕ:</div>
+                <ul>
+                    <li class="requirements_li requirements_li-red">Наличие автомобиля без рекламы</li>
+                    <li class="requirements_li requirements_li-red">Автомобиль не должен быть желтый и не с желтыми номерами</li>
+                    <li class="requirements_li requirements_li-red">Машина не старше 3 лет</li>
+                    <li class="requirements_li requirements_li-red">Стаж вождения не менее 3 лет</li>
+                    <li class="requirements_li requirements_li-red">Дивайс на системе андроид 4.0и выше(самсунг)</li>
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <div class="requirements_title requirements_title-red">ДОКУМЕНТЫ:</div>
+                <ul>
+                    <li class="requirements_li requirements_li-red">Права 2 стороны</li>
+                    <li class="requirements_li requirements_li-red">Паспорт лицевая сторона</li>
+                    <li class="requirements_li requirements_li-red">СтС</li>
+                    <li class="requirements_li requirements_li-red">Лицензия(если есть)</li>
+                    <li class="requirements_li requirements_li-red">Номер телефона</li>
+                    <li class="requirements_li requirements_li-red">Номер карты для перечисления денег(указать в письме)!
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+</section>
 
 
         
