--- a/index.html
+++ b/index.html
@@ -55,21 +55,27 @@
                 <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
             </ul>
         </div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </nav>
     <div class="subheader">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 offset-md-1">
+                <div class="col-6 col-md-4 offset-md-1">
                     <a href="#" class="subheader_logo">
                         <img src="img/logo/logo.png" alt="logo">
                         <div class="subheader_official">Официальный партнер Uber в Украине</div>
                     </a>
                 </div>
-                <div class="col-md-2 offset-md-2">
+                <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                     <div class="subheader_call">Звоните нам ежедневно</div>
-                    <a href="tel:+380674692200" class="subheader_phone">+380 67 469 2200</a>
+                    <a href="tel:+380674692200" class="subheader_phone">8 067 469 2200</a>
                 </div>
-                <div class="col-md-2">
+                <div class="col-6 col-md-3">
+                    <a href="tel:+380674692200" class="xs-visible subheader_phone">8 067 469 2200</a>
                     <button class="subheader_btn">Заказать звонок</button>
                 </div>
             </div>
@@ -81,7 +87,7 @@
         <section class="promo">
     <div class="container">
         <div class="row">
-            <div class="col-md-10 offset-md-1">
+            <div class="col-md-12 col-lg-10 offset-lg-1">
                 <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
                 <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
                 <div class="promo_descr">
@@ -337,18 +343,20 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <ul class="menu">
-                    <li class="menu_item"><a href="#" class="menu_link">НА ГЛАВНУЮ</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">ГОРОДА</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">ДЛЯ ВОДИТЕЛЕЙ</a></li>
-                </ul>
-                <ul class="menu menu-sub">
-                    <li class="menu_item"><a href="#" class="menu_link">ЦЕНТР ПОДДЕРЖКИ</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">ВАКАНСИИ</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">РАЗРАБОТЧИКИ</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">БЛОГ</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">О НАС</a></li>
-                </ul>
+                <div class="men">
+                    <ul class="menu">
+                        <li class="menu_item"><a href="#" class="menu_link">НА ГЛАВНУЮ</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">ГОРОДА</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">ДЛЯ ВОДИТЕЛЕЙ</a></li>
+                    </ul>
+                    <ul class="menu menu-sub">
+                        <li class="menu_item"><a href="#" class="menu_link">ЦЕНТР ПОДДЕРЖКИ</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">ВАКАНСИИ</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">РАЗРАБОТЧИКИ</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">БЛОГ</a></li>
+                        <li class="menu_item"><a href="#" class="menu_link">О НАС</a></li>
+                    </ul>
+                </div>
                 <div class="lang">РУССКИЙ</div>
             </div>
             <div class="col-md-4">
